package entities;

/**
 * Represents a user's review on a piece of media.
 */

public class Review {

}