@startuml
left to right direction

skinparam shadowing false
skinparam linetype ortho
skinparam nodesep 45
skinparam ranksep 55

class MediaReviewsPanel
class MediaReviewsController
class CreateReviewInputData
interface CreateReviewInputBoundary
class CreateReviewInteractor
class Review
class CreateReviewOutputData
interface CreateReviewOutputBoundary
class MediaReviewsPresenter
class MediaReviewsViewModel

MediaReviewsPanel --> MediaReviewsController
MediaReviewsPanel --> MediaReviewsViewModel

MediaReviewsController --> CreateReviewInputData
MediaReviewsController --> CreateReviewInputBoundary

CreateReviewInteractor ..|> CreateReviewInputBoundary
CreateReviewInteractor --> CreateReviewInputData
CreateReviewInteractor --> Review
CreateReviewInteractor --> CreateReviewOutputData
CreateReviewInteractor --> CreateReviewOutputBoundary

MediaReviewsPresenter ..|> CreateReviewOutputBoundary
MediaReviewsPresenter --> CreateReviewOutputData
MediaReviewsPresenter --> MediaReviewsViewModel

@enduml